--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vídeo</title>
+    <link rel="stylesheet"href="style.css" >
 </head>
 <body>
-    
-</body>
+    <div class="video-box">
+            <iframe width="560" height="315" src="https://youtu.be/3V3m25dAYUg?si=otNS9Aq3E_rKCuyN" frameboder="0" allowfullscreen></iframe>
+    <div class="info">
+     <h3>Título</h3>
+     <p>Descrição breve de video.</p>
+    </div>
+   </div>
+  </body>
 </html>
